# AseVoxel

./: .gitignore  AseVoxel-Viewer.aseprite-extension  FACESHADE_TEST_RESULTS.md  LICENSE  LIGHTING_ANGLE_TEST.md  LIGHTING_TEST_ANALYSIS.md  MIGRATION_GUIDE.md  MODULAR_SHADER_IMPLEMENTATION_PLAN.md  NATIVE_RENDERING_CONSTRAINTS.md  NATIVE_SHADER_API.md  NATIVE_SHADER_IMPLEMENTATION.md  NATIVE_SHADER_QUICKREF.md  PHASE_1_SUMMARY.md  PHASE_3_INTEGRATION_STATUS.md  PIPELINE_SPEC.md  QUICK_TEST_CARD.md  README.md  RENDER_REFACTOR_PROPOSAL.md  SESSION_SUMMARY.md  SHADER_BUILD_SUMMARY.md  SHADER_SAFETY_FEATURES.md  SHADER_STACK_INTEGRATION_COMPLETE.md  SHADER_STACK_PROPOSAL.md  SHADER_UPDATES_MATERIAL_TINT.md  START_HERE_N1.md  TEST_EXTENSION.md  asevoxel_native.cpp  create_extension.ps1  create_extension.sh  dialogUtils.lua  dialogueManager.lua  fileUtils.lua  fxStack.lua  imageUtils.lua  loader.lua  main.lua  mathUtils.lua  meshRenderer.lua  modelViewer.lua  nativeBridge.lua  (+7 more)
AseVoxel Viewer/: AseVoxel-Viewer.aseprite-extension  README.md  create_extension.sh  dialogueManager.lua  exportDialog.lua  fileUtils.lua  fxStackDialog.lua  nativeBridge.lua  package.json  previewRenderer.lua  rotation.lua
core/: preview_manager.lua  sprite_watcher.lua  viewer.lua  viewer_core.lua  viewer_state.lua
dialog/: animation_dialog.lua  controls_dialog.lua  dialog_manager.lua  export_dialog.lua  fx_stack_dialog.lua  help_dialog.lua  main_dialog.lua  outline_dialog.lua  preview_dialog.lua
io/: export_obj.lua  export_ply.lua  export_stl.lua  file_common.lua
math/: angles.lua  matrix.lua  rotation.lua  rotation_matrix.lua  trackball.lua
release_notes/: v1.0.md
render/: SHADER_SYSTEM.md  canvas_renderer.lua  face_visibility.lua  fast_visibility.lua  geometry_pipeline.lua  mesh_builder.lua  mesh_pipeline.lua  mesh_renderer.lua  native_bridge.lua  native_config.lua  native_shader_api.h  preview_renderer.lua  rasterizer.lua  remote_renderer.lua  shader_interface.lua  shader_stack.lua  shader_ui.lua  shading.lua  vertex_cache.lua  voxel_generator.lua
render/shaders/: CMakeLists.txt  Makefile  README.md  basic_lighting_shader.cpp  dynamic_lighting_shader.cpp  native_shader_loader.cpp  native_shader_loader.hpp  stb_image_write.h  stb_image_write_impl.cpp  test_host_shim  test_host_shim.cpp  test_shader_load.cpp
render/shaders/fx/: faceshade.cpp  faceshade.lua  faceshade_camera.lua  iso.lua
render/shaders/lighting/: basic.lua  dynamic.lua
scripts/: publish_release.sh
utils/: dialog_utils.lua  performance_profiler.lua  preview_utils.lua
